--- a/styles/style.css
+++ b/styles/style.css
@@ -20,7 +20,18 @@ h1 {
     font-weight: 900;
 }
 
-a {
+a{
+    color: inherit;
+    text-decoration: none;
+}
+
+a:hover {
+    color: inherit;
+    text-decoration: none;
+}
+
+a:visited {
+    color: inherit;
     text-decoration: none;
 }
 
